Buff single-block boilers and introduce tier 3 of it